--- a/composer.json
+++ b/composer.json
@@ -19,8 +19,7 @@
         "laminas/laminas-stdlib": "^3.3",
         "psr/container": "^1.0",
         "laminas/laminas-modulemanager": "^2.10",
-        "laminas/laminas-eventmanager": "^3.3",
-        "laminas/laminas-dependency-plugin": "^1.0 || ^2.0"
+        "laminas/laminas-eventmanager": "^3.3"
     },
     "autoload": {
         "psr-4": {
