--- a/composer.json
+++ b/composer.json
@@ -13,11 +13,11 @@
         }
     ],
     "require": {
-        "php": "^7.4",
-        "laminas/laminas-mvc": "^3.1",
+        "php": "^8.1",
+        "laminas/laminas-mvc": "^3.3",
         "laminas/laminas-servicemanager": "^3.4",
         "laminas/laminas-stdlib": "^3.3",
-        "psr/container": "^1.0",
+        "psr/container": "^1.0 || ^2.0",
         "laminas/laminas-modulemanager": "^2.10",
         "laminas/laminas-eventmanager": "^3.3"
     },
